<resources>
    <string name="app_name">POPCON</string>
    <string name="unit_currency">%s원</string>
    <string name="due_date">%s 까지</string>

    <!--    fragment_add-->
    <string name="regi_coupon">기프티콘 등록</string>
    <string name="regi_img_count">(%1$d/%2$d)</string>
    <string name="coupon_img">상품 이미지</string>
    <string name="barcode_img">바코드 이미지</string>
    <string name="original_see">쿠폰 원본 보기</string>
    <string name="product_name">이름</string>
    <string name="product_brand">브랜드</string>
    <string name="barcode">바코드번호</string>
    <string name="date">유효기간</string>
    <string name="price">금액권</string>
    <string name="won">원</string>
    <string name="memo">메모</string>
    <string name="write_memo">메모를 남겨보세요.</string>
    <string name="regi">등록하기</string>
    <string name="sign_naver">네이버로 시작하기</string>
    <string name="btn_finish_use">사용하기</string>
    <string name="btn_revert">사용완료</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    fragment_settings-->
    <string name="settings">설정</string>
    <string name="account">로그인 된 계정</string>
    <string name="join">로그인 하기</string>
    <string name="noti">알림</string>
    <string name="noti_title_first">마감임박 최초 알림</string>
    <string name="noti_title_interval">마감임박 알림 간격</string>
    <string name="noti_title_time">시간 설정</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="time_9">9:00</string>
    <string name="time_13">13:00</string>
    <string name="time_18">18:00</string>

    <!--  dialog_add_crop_chk  -->
    <string name="cancel">취소</string>
    <string name="recrop">직접 자르기</string>

    <!--  dialog_settings_noti  -->
    <string name="first">일 전</string>
    <string name="interval">일 마다</string>
    <string name="complete">완료</string>
    <string name="btn_edit">수정완료</string>

    <!--  dialog_progress  -->
    <string name="progress">Loading..</string>

    <!--  dialog_mms  -->
    <string name="ask_add">새로운 기프티콘을 등록하시겠습니까?</string>
    <string name="go_to_add">등록</string>
</resources>