<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="gifticon"
            type="com.ssafy.popcon.dto.Gifticon" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:fitsSystemWindows="true"
        android:paddingBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/l_regi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="9">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/l_add_coupon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/l_coupon_img"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cv_product_img"
                                android:layout_width="0dp"
                                android:layout_height="150dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                app:cardCornerRadius="12dp"
                                app:layout_constraintHorizontal_weight="1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@id/cv_barcode_img"
                                app:layout_constraintTop_toTopOf="parent">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:padding="10dp">

                                    <ImageView
                                        android:id="@+id/iv_coupon_img"
                                        android:layout_width="0dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop"
                                        app:imageUrl="@{gifticon.product_filepath}"
                                        app:layout_constraintBottom_toTopOf="@+id/tv_coupon_img"
                                        app:layout_constraintLeft_toLeftOf="parent"
                                        app:layout_constraintRight_toRightOf="parent" />

                                    <TextView
                                        android:id="@+id/tv_coupon_img"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/coupon_img"
                                        android:textSize="11sp"
                                        app:layout_constraintLeft_toLeftOf="parent"
                                        app:layout_constraintRight_toRightOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/iv_coupon_img" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cv_barcode_img"
                                android:layout_width="0dp"
                                android:layout_height="150dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:layout_marginBottom="8dp"
                                app:cardCornerRadius="12dp"
                                app:layout_constraintHorizontal_weight="2"
                                app:layout_constraintLeft_toRightOf="@id/cv_product_img"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:padding="10dp">

                                    <ImageView
                                        android:id="@+id/iv_barcode_img"
                                        android:layout_width="0dp"
                                        android:layout_height="100dp"
                                        android:scaleType="centerCrop"
                                        app:imageUrl="@{gifticon.barcode_filepath}"
                                        app:layout_constraintBottom_toTopOf="@+id/tv_barcode_img"
                                        app:layout_constraintLeft_toLeftOf="parent"
                                        app:layout_constraintRight_toRightOf="parent" />

                                    <TextView
                                        android:id="@+id/tv_barcode_img"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="10dp"
                                        android:text="@string/barcode_img"
                                        android:textSize="11sp"
                                        app:layout_constraintLeft_toLeftOf="parent"
                                        app:layout_constraintRight_toRightOf="parent"
                                        app:layout_constraintTop_toBottomOf="@+id/iv_barcode_img" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                            </androidx.cardview.widget.CardView>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_original_see"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_round_grey"
                            android:text="@string/original_see"
                            android:textSize="16sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/l_coupon_img" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/l_add_coupon">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/product_name"
                                android:textColor="@color/popcon_black_03"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/et_product_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/popcon_grey_09"
                                android:text="@{gifticon.productName}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/product_brand"
                                android:textColor="@color/popcon_black_03"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/et_product_brand"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/popcon_grey_09"
                                android:text="@{gifticon.brand.brandName}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/barcode"
                                android:textColor="@color/popcon_black_03"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/et_barcode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/popcon_grey_09"
                                android:text="@{gifticon.barcodeNum}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textColor="@color/popcon_black_03"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/et_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/popcon_grey_09"
                                android:inputType="datetime"
                                android:maxLength="10"
                                android:text="@{gifticon.due.toString()}" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/price"
                                    android:textColor="@color/popcon_black_03"
                                    android:textSize="15sp" />

                                <CheckBox
                                    android:id="@+id/cb_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/popcon_orange"
                                    android:checked="@{gifticon.price == -1? false : true}"
                                    android:minWidth="0dp"
                                    android:minHeight="0dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/l_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:visibility="gone">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/won"
                                    android:textColor="@color/popcon_black_03"
                                    android:textSize="20sp" />

                                <EditText
                                    android:id="@+id/et_price"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/popcon_grey_09"
                                    android:inputType="number"
                                    android:text="@{gifticon.price==0? `` : String.valueOf(gifticon.price)}" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/memo"
                                android:textColor="@color/popcon_black_03"
                                android:textSize="15sp" />

                            <EditText
                                android:id="@+id/et_write_memo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/popcon_grey_09"
                                android:hint="@string/write_memo"
                                android:text="@{gifticon.memo}" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_round_orange"
            android:text="@string/btn_edit"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_regi"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>